# kagoole

./: .env.example  LICENSE  Pipfile  README.md  development.md  docker-compose.yml
.github/workflows/: deploy.yml  generate_requirements.txt.yml
backend/: .env.example  .gitignore  Dockerfile  Pipfile  app.json  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/kagoole/: admin.py  apps.py  models.py  serializers.py  urls.py  util.py  views.py
backend/kagoole/fixtures/: kagoole.json
backend/scripts/: batch.py  competition_tag.py  competition_tags.py  create_sample.py  kernel_info.py  starter.py
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Competitions.js  Header.js  Solutions.js  index.css  index.js  table-util.js  url.js
frontend/src/modal/: CompetitionBox.js  DeleteModal.js  DeleteModalButton.js  ModalButton.js  SaveModal.js  SaveModalButton.js  SolutionModal.js
