[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
kaggle = "^1.5.12"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-reversion = "^5.0.0"
django-cors-headers = "^3.11.0"
requests-oauthlib = "^1.3.1"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
